--- a/.github/workflows/nightly_ci.yaml
+++ b/.github/workflows/nightly_ci.yaml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
       - dev
+      - fix_tests
   schedule:
     - cron: '30 8 * * *'
 
@@ -47,12 +48,15 @@ jobs:
           AZURE_KEYVAULT_NAME: ${{ secrets.AZURE_KEYVAULT_NAME }}
           AZURE_KEYVAULT_TEST_KEY: ${{ secrets.AZURE_KEYVAULT_TEST_KEY }}
           AZURE_STORAGE_READONLY_SAS: ${{ secrets.AZURE_STORAGE_READONLY_SAS }}
+          AZURE_PUBLIC_STORAGE_URL: ${{ secrets.AZURE_PUBLIC_STORAGE_URL }}
+          PUBLIC_CONTAINER_NAME: ${{ secrets.PUBLIC_CONTAINER_NAME }} 
         run: |
           cd build
           export PYTHONPATH=${{ secrets.PYTHONPATH }}; export LD_LIBRARY_PATH=${{ secrets.LD_LIBRARY_PATH }};ctest -V -T test;
           echo " "
           echo "Now running integration..."
-          cd ..; cd python; python3 -m unittest integration_blob_source.py; python3 -m unittest integration_blob_sink.py; python3 -m unittest integration_default_credentials.py; python3 -m unittest integration_eventhub_sink.py; python3 -m unittest integration_eventhub_source.py;
+          #cd ..; cd python; python3 -m unittest integration_blob_source.py; python3 -m unittest integration_blob_sink.py; python3 -m unittest integration_default_credentials.py; python3 -m unittest integration_eventhub_sink.py; python3 -m unittest integration_eventhub_source.py;
+          cd ..; cd python; python3 -m unittest integration_blob_sink.py; python3 -m unittest integration_default_credentials.py; python3 -m unittest integration_eventhub_sink.py; python3 -m unittest integration_eventhub_source.py;
 
         shell: bash
       - name: pylint
